# cv_ocr_fermilab

./: README.md  easyocr.md  easyocr_adventure.ipynb  pyproject.toml
